[project]
name = "agentdemo"
version = "0.1.0"
description = ""
authors = [
    {name = "Rick",email = "1959745078@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic-ai (>=1.0.10,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
